--- a/replacement_kinesis_controller.cmp
+++ b/replacement_kinesis_controller.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by Cvpcb (2015-02-21 BZR 5441)-product   date = Sun 22 Feb 2015 09:39:50 PM CST
+Cmp-Mod V01 Created by Cvpcb (2015-02-21 BZR 5441)-product   date = Sun 22 Feb 2015 10:23:24 PM CST
 
 BeginCmp
 TimeStamp = /54E71464;
@@ -151,14 +151,14 @@ BeginCmp
 TimeStamp = /54E6F569/54E6FAEE;
 Reference = CN2;
 ValeurCmp = Micro-USB;
-IdModule  = ;
+IdModule  = replacement_kinesis_controller:USB_micro_B-vertical;
 EndCmp
 
 BeginCmp
 TimeStamp = /54E6F569/54E6FAE7;
 Reference = CN3;
 ValeurCmp = Mini-USB;
-IdModule  = ;
+IdModule  = replacement_kinesis_controller:USB_mini_B-vertical;
 EndCmp
 
 BeginCmp
